--- a/lab3/estilo.css
+++ b/lab3/estilo.css
@@ -8,10 +8,12 @@
 
 /* Corpo da página */
 body {
-    background: #e3f2fd; /* Azul claro */
     display: flex;
+    background: #e3f2fd; /* Azul claro */
     justify-content: center;
+    align-items: center;
     padding: 16px;
+    height: 100vh;
 }
 
 /* Container principal */
